force-app/main/default/objects/Marriage__c/Marriage__c.object-meta.xml
<CustomObject>
    <label>Marriage</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marriages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>