force-app/main/default/objects/Marriage__c/fields/SeparationDate__c.field-meta.xml
<CustomField>
    <fullName>SeparationDate__c</fullName>
    <label>Separation Date</label>
    <type>Date</type>
</CustomField>