force-app/main/default/objects/Marriage__c/fields/SpouseBirthDate__c.field-meta.xml
<CustomField>
    <fullName>SpouseBirthDate__c</fullName>
    <label>Spouse Birth Date</label>
    <type>Date</type>
</CustomField>