force-app/main/default/objects/Marriage__c/fields/SpouseName__c.field-meta.xml
<CustomField>
    <fullName>SpouseName__c</fullName>
    <label>Spouse Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>