force-app/main/default/objects/Marriage__c/fields/TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>TerminationReason__c</fullName>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>